# todoish

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  notifications.rs  notion.rs  sync.rs
src/components/: FocusEdit.tsx  QuickAdd.tsx  Reminder.tsx  SnoozeMenu.tsx  TaskGroup.tsx  TaskRow.tsx
src/hooks/: useKeyboard.ts  useTasks.ts
src/lib/: groupTasks.ts  sounds.ts  timeHint.ts
src/views/: Focus.tsx  Main.tsx  Setup.tsx
