[package]
name = "todoish"
version = "0.1.0"
description = "ADHD-friendly Notion task manager"
authors = []
edition = "2021"

[lib]
name = "todoish_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
window-vibrancy = "0.5"

